# mlflow-stack

./: .env.example  .gitignore  README.md  README.md.bak  README.md.bak2  docker-compose.yml
localstack/: setup-s3-bucket.sh
minio/: create-bucket.sh
mlflow/: Dockerfile  pyproject.toml
