[project]
name = "mlflow-stack"
version = "1.0.0"
description = "Self-hosted MLflow tracking server with PostgreSQL and MinIO"
readme = "../README.md"
requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
keywords = ["mlflow", "machine-learning", "ml-ops", "experiment-tracking"]

dependencies = [
    "mlflow[gateway]>=3.6.0,<4.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "boto3>=1.41.2,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
